--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,19 +17,17 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.7
     - pip
     - setuptools_scm
   run:
-    - python >=3.6
-    - nbclient >=0.4.0
-    - nbconvert <6,>=5.5.0
-    - voila <0.2,>=0.1.21
+    - python >=3.7
+    - nbconvert >=6.0.7,<7
+    - voila >=0.2.0,<0.3
 
 test:
   imports:
     - jupyter_flex
-    - jupyter_flex.tests
   commands:
     - pip check
   requires:
