--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,8 @@ requirements:
     - setuptools_scm
   run:
     - python >=3.7
+    - jupyter_server >=1.1.0
+    - nbclient >=0.4.0
     - nbconvert >=6.0.7,<7
     - voila >=0.2.0,<0.3
 
