--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,10 +22,11 @@ requirements:
     - setuptools_scm
   run:
     - python >=3.7
-    - jinja2 >=3.0.1,<4
-    - nbconvert >=6.0.7,<7
-    - voila >=0.2.0,<0.3
+    - illusionist >=0.3.0,<0.4.0
     - ipykernel >=6.4.1,<7
+    - jinja2 >=3.0.1,<4
+    - nbconvert >=6.2.0,<7
+    - voila >=0.2.0,<0.3
 
 test:
   imports:
