--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,22 +13,21 @@ source:
 build:
   number: 0
   noarch: python
-  script:
-    - rm -rf pyproject.toml
-    - {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.8
+    - hatchling
     - pip
-    - setuptools_scm
   run:
-    - python >=3.7
-    - illusionist >=0.3.0,<0.4.0
-    - ipykernel >=6.4.1,<7
-    - jinja2 >=3.0.1,<4
-    - nbconvert >=6.2.0,<7
-    - voila >=0.2.0,<0.3
+    - python >=3.8
+    - ipykernel >=6.21.3
+    - jinja2 >=3.1.2
+    - markupsafe >=2.0.1
+    - nbconvert >=7.2.9
+    - voila >=0.4.0
+
 
 test:
   imports:
